--- a/src/pages/myorder/index.less
+++ b/src/pages/myorder/index.less
@@ -3,9 +3,20 @@
   background: #f1f2f2;
   height: 100%;
   .orderTabs {
-    padding: 15px 10px 0;
+  }
+  .list {
+    padding-top: 88px;
   }
 }
+
+.taroify-tabs__wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+}
+
 .taroify-tabs__nav--line {
   background: #f1f2f2;
 }
