--- a/src/pages/myorder/index.less
+++ b/src/pages/myorder/index.less
@@ -21,14 +21,17 @@
   background: #f1f2f2;
 }
 .taroify-tabs__line {
-  bottom: 16px;
+  bottom: 28px;
   width: 120px;
   height: 14px;
   background-color: #2ac8be;
   border-radius: 30px;
 }
+.taroify-tabs__tab {
+  font-size: 24px;
+}
 .taroify-tabs__tab--active {
-  font-size: 40px;
+  font-size: 28px;
 }
 .taroify-tabs__tab__content {
   z-index: 2;
