--- a/src/pages/myorder/index.less
+++ b/src/pages/myorder/index.less
@@ -1,28 +1,100 @@
 .MyOrderPage__root {
-  border-radius: 25px 25px 0 0;
-  background: #f1f2f2;
-  height: 100%;
+  // border-radius: 25px 25px 0 0;
+  // background: #f1f2f2;
+  // height: 100%;
   .orderTabs {
-  }
-  .list {
-    padding-top: 88px;
-  }
-}
+    background: #f1f2f2;
+    // .list {
+    //   background: #f1f2f2;
+    //   .item {
+    //     width: 701px;
+    //     margin: 21px 24px;
+    //     background: #fff;
+    //     border-radius: 24px;
+    //     .card {
+    //       .state {
+    //         font-size: 28px;
+    //         font-weight: bold;
+    //         line-height: 42px;
+    //         padding-left: 18px;
+    //       }
+    //       .content {
+    //         display: flex;
+    //         // padding-bottom: 24px;
+    //         // border-bottom: 2px solid #999;
 
-.taroify-tabs__wrap {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
+    //         .img {
+    //           width: 146px;
+    //           height: 152px;
+    //         }
+    //         .name {
+    //           padding-left: 10px;
+    //           width: 478px;
+    //           font-size: 28px;
+    //           font-weight: bold;
+    //           line-height: 38px;
+    //           .small-name {
+    //             padding-top: 20px;
+    //             font-size: 24px;
+    //             line-height: 38px;
+    //             color: #999;
+    //           }
+    //         }
+    //       }
+    //       .price {
+    //         display: flex;
+    //         justify-content: flex-end;
+    //         box-sizing: border-box;
+    //         color: #666;
+    //         padding: 24px 28px;
+    //         border-bottom: 2px solid #eee;
+    //         .discount {
+    //           width: 148px;
+    //           background: #f3f4f4;
+    //           border-radius: 2px;
+    //           font-size: 24px;
+    //           text-align: center;
+    //         }
+    //         .money {
+    //           color: #fd7d81;
+    //         }
+    //       }
+    //       .message {
+    //         display: flex;
+    //         justify-content: flex-end;
+    //         font-size: 22px;
+    //         line-height: 42px;
+    //         padding: 22px 24px;
+    //         .message-one {
+    //           border: 2px solid #00d2c6;
+    //           border-radius: 24px;
+    //           min-width: 134px;
+    //           margin-right: 14px;
+    //           color: #00d2c6;
+    //           text-align: center;
+    //         }
+    //         .message-two {
+    //           border: 2px solid;
+    //           border-radius: 24px;
+    //           padding: 0 18px;
+    //           background: #00d2c6;
+    //           color: #fff;
+    //           text-align: center;
+    //         }
+    //       }
+    //     }
+    //   }
+    // }
+  }
 }
 
 .taroify-tabs__nav--line {
   background: #f1f2f2;
+  border-radius: 20px 20px 0 0;
 }
 .taroify-tabs__line {
   bottom: 28px;
-  width: 120px;
+  width: 90px;
   height: 14px;
   background-color: #2ac8be;
   border-radius: 30px;
@@ -35,4 +107,7 @@
 }
 .taroify-tabs__tab__content {
   z-index: 2;
+}
+.taroify-tabs__wrap__scroll--line {
+  // background: #f1f2f2;
 }
