--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -4,13 +4,13 @@
   min-height: 100vh;
   .swiper {
     flex: 1;
-    .taroify-swiper-item {
-      color: #fff;
-      font-size: 20px * 2;
-      background: #39a9ed;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    // .taroify-swiper-item {
+    //   color: #fff;
+    //   font-size: 20px * 2;
+    //   background: #39a9ed;
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    // }
   }
 }
