--- a/src/pages/myorder/components/list/index.less
+++ b/src/pages/myorder/components/list/index.less
@@ -6,11 +6,13 @@
     background: #fff;
     border-radius: 24px;
     .card {
+      padding: 23px 30px 0;
       .state {
         font-size: 28px;
         font-weight: bold;
         line-height: 42px;
         padding-left: 18px;
+        padding-bottom: 8px;
       }
       .content {
         display: flex;
@@ -20,9 +22,10 @@
         .img {
           width: 146px;
           height: 152px;
+          border-radius: 20px;
         }
         .name {
-          padding-left: 10px;
+          padding-left: 20px;
           width: 478px;
           font-size: 28px;
           font-weight: bold;
@@ -42,12 +45,13 @@
         color: #666;
         padding: 24px 28px;
         border-bottom: 2px solid #eee;
+        font-size: 24px;
         .discount {
           width: 148px;
           background: #f3f4f4;
           border-radius: 2px;
-          font-size: 24px;
           text-align: center;
+          margin-right: 13px;
         }
         .money {
           color: #fd7d81;
