--- a/src/pages/aboutUs/index.less
+++ b/src/pages/aboutUs/index.less
@@ -11,6 +11,11 @@
     margin: 154px auto 40px;
     background: #fff;
     border-radius: 20px;
+    .img {
+      width: 226px;
+      height: 232px;
+      border-radius: 20px;
+    }
   }
   .num {
     font-size: 36px;
