--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: flex-end;
     margin-right: 14px;
-    .btn {
+    .btn .img {
       width: 40px;
       height: 40px;
       margin-right: 30px;
@@ -18,6 +18,10 @@
       background: #f2f2f2;
       border-radius: 50%;
       margin-left: 30px;
+      .img {
+        width: 100%;
+        height: 100%;
+      }
     }
     .User__Name {
       padding-left: 20px;
@@ -40,7 +44,7 @@
     margin: 30px;
     background: #4dcfc5;
     border-radius: 14px;
-    .details {
+    .details .img {
       width: 34px;
       height: 34px;
       position: absolute;
@@ -51,6 +55,10 @@
       // position: absolute;
       display: flex;
       padding: 45px 30px;
+      .Token__Img .img {
+        width: 112px;
+        height: 112px;
+      }
       .Token__Num {
         color: #fff;
         font-size: 70px;
