--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -5,9 +5,10 @@
   bottom: 45px;
   display: flex;
   background-color: rgba(255, 255, 255, 0.95);
-  // width: 86%;
+  // height: 102px;
   margin: 0 auto;
-  border-radius: 50px;
+  border: 6px solid #fff;
+  border-radius: 76px;
   flex-direction: row;
 
   .tab {
