--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -1,34 +1,40 @@
-.TabBar__root {
+.TabBar__root__wrap {
   position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 45px;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+}
+.TabBar__root {
   display: flex;
   background-color: rgba(255, 255, 255, 0.95);
-  // height: 102px;
-  margin: 0 auto;
+  margin: 0 50px;
   border: 6px solid #fff;
   border-radius: 76px;
-  flex-direction: row;
-
+  padding: 8px 0 4px;
   .tab {
     box-sizing: border-box;
-    // width: 20%;
-    // flex: 1;
-    // height: 80px;
-    font-size: 24px;
-    padding: 20px 0 11px;
-    margin: 0 80px;
-    text-align: center;
+    flex: 1;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    View:first-child {
+      width: 66px;
+      height: 66px;
+    }
     .img {
-      margin: 20px auto;
-      width: 34px;
-      height: 38px;
+      width: 100%;
+      height: 100%;
     }
     .text {
       font-size: 16px;
+      line-height: 22px;
+      color: #b4c1c0;
+    }
+  }
+  .active {
+    .text {
+      color: #4dcfc5;
     }
   }
 }
