--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -1,4 +1,6 @@
 .MineScreen__root {
+  background: #f4f4f4;
+  padding: 30px;
   .Header__btn {
     display: flex;
     justify-content: flex-end;
@@ -12,19 +14,18 @@
   .user {
     display: flex;
     .User__Img {
-      width: 100px;
-      height: 100px;
+      width: 142px;
+      height: 142px;
       padding: 10px;
-      background: #f2f2f2;
+      // background: #f2f2f2;
       border-radius: 50%;
-      margin-left: 30px;
       .img {
-        width: 100%;
-        height: 100%;
+        width: 142px;
+        height: 142px;
       }
     }
     .User__Name {
-      padding-left: 20px;
+      padding-left: 2px;
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
@@ -40,8 +41,8 @@
     }
   }
   .dolor {
+    margin: 30px 0;
     position: relative;
-    margin: 30px;
     background: #4dcfc5;
     border-radius: 14px;
     .details .img {
@@ -52,8 +53,8 @@
       right: 32px;
     }
     .token {
-      // position: absolute;
       display: flex;
+      align-items: center;
       padding: 45px 30px;
       .Token__Img .img {
         width: 112px;
@@ -68,8 +69,58 @@
     }
   }
   .card {
-    margin: 30px;
     display: flex;
-    justify-content: space-between;
+    margin: 30px 0;
+    .Card__Left {
+      margin-right: 17px;
+    }
+    .Card__Item {
+      height: 95px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      background: #fff;
+      border-radius: 14px;
+      .img {
+        width: 50px;
+        height: 44px;
+        padding-right: 20px;
+      }
+      .num {
+        font-size: 28px;
+        font-weight: bold;
+      }
+      .text {
+        font-size: 16px;
+        color: #9e9e9e;
+      }
+    }
+  }
+  .use-list {
+    display: flex;
+    // justify-content: center;
+    flex-wrap: wrap;
+    // height: 266px;
+    border-radius: 14px;
+    background-color: #fff;
+    padding: 30px 60px;
+    .item {
+      // padding: 0 41px;
+      width: 25%;
+      display: flex;
+      align-items: center;
+      // justify-content: center;
+      flex-direction: column;
+      // flex-wrap: wrap;
+      .img {
+        width: 50px;
+        height: 40px;
+      }
+      .item-text {
+        font-size: 20px;
+        line-height: 42px;
+      }
+    }
   }
 }
