--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -153,52 +153,90 @@
       margin-top: 15px;
     }
   }
-  .scroll {
-    .r-c {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+  .product-list {
+    .list {
+      .item {
+        width: 48.5%;
+        margin-bottom: 24px;
+        .card {
+          background: #fff;
+          border-radius: 20px;
+          overflow: hidden;
+          .big-img {
+            position: relative;
 
-      .r-t {
-        width: 100%;
-        font-weight: bold;
-        margin: 20px;
-        text-align: left;
-        > Text {
-          margin-left: 25px;
-        }
-      }
-      .r-i {
-        position: relative;
-        .r-o {
-          float: left;
-          width: 320px;
-          margin: 0 5px;
-          border: solid 1px #ccc;
-          > Image {
-            width: 100%;
-          }
-          .r-info {
-            display: flex;
-            flex-direction: column;
-            padding: 20px 20px;
-            > Text {
-              line-height: 50px;
+            .label {
+              width: 144px;
+              padding: 4px 10px 0;
+              position: absolute;
+              bottom: 17px;
+              left: 17px;
+              background: #fff;
+              border-radius: 8px;
+              font-size: 20px;
+              // line-height: 42px;
+              // position: relative;
+              .black {
+                width: 76px;
+                height: 32px;
+              }
+              .label-pic {
+                position: absolute;
+                color: #fff;
+                left: 24px;
+              }
+              .text {
+                position: absolute;
+                right: 10px;
+              }
             }
-            > Text:nth-child(1) {
+          }
+          .big {
+            width: 100%;
+            height: 415px;
+          }
+          .content {
+            padding: 17px;
+            .text {
+              font-size: 24px;
+              line-height: 32px;
               font-weight: bold;
             }
-            > Text:nth-child(2) {
-              color: #ccc;
-              font-size: 25px;
+            .money {
+              font-size: 24px;
+              line-height: 42px;
+              font-weight: bold;
             }
-            > Text:nth-child(3) {
-              color: #f93841;
+            .consume {
+              display: flex;
+              justify-content: space-between;
+              font-size: 16px;
+              line-height: 34px;
+              color: #ababab;
+              padding: 30px 0 14px;
             }
+            .is-like {
+              width: 17px;
+              height: 14px;
+              margin-right: 5px;
+            }
+          }
+          .right-all {
+            color: #333;
+            font-size: 28px;
+            line-height: 40px;
+            font-weight: 500;
+          }
+          .text {
+            margin-bottom: 20px;
           }
         }
       }
     }
   }
+}
+.taroify-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
