--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -1,14 +1,25 @@
 .MineScreen__root {
   background: #f4f4f4;
-  padding: 30px;
+  padding: 0 30px;
   .Header__btn {
     display: flex;
     justify-content: flex-end;
     margin-right: 14px;
-    .btn .img {
-      width: 40px;
-      height: 40px;
-      margin-right: 30px;
+    .btn {
+      .img1 {
+        width: 28px;
+        height: 30px;
+        margin-right: 30px;
+      }
+      .img2 {
+        width: 34px;
+        height: 32px;
+        margin-right: 26px;
+      }
+      .img3 {
+        width: 36px;
+        height: 32px;
+      }
     }
   }
   .user {
@@ -97,7 +108,126 @@
       }
     }
   }
+  .play-game {
+    margin-top: 24px;
+    background: #8b9a9b;
+    border-radius: 14px;
+    .trip {
+      padding: 20px 30px 24px 28px;
+      background: #fff;
+      border-radius: 14px;
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 21px;
+        .happy {
+          font-size: 26px;
+          line-height: 42px;
+          font-weight: bold;
+        }
+        .share {
+          background: #e5faf8;
+          border-radius: 6px;
+          padding: 7px 12px;
+          color: #4dcfc5;
+          font-size: 20px;
+          line-height: 42px;
+          font-weight: bold;
+        }
+      }
+      .play-name {
+        color: #282828;
+        font-size: 20px;
+        line-height: 42px;
+        font-weight: bold;
+      }
+      .step {
+        padding: 25px 0;
+        .custom-color {
+          .taroify-step--completed {
+            .taroify-step__line,
+            .taroify-step__circle {
+              background-color: #64d0c8;
+            }
+          }
+
+          .taroify-step--active {
+            .taroify-step__label,
+            .taroify-step__icon {
+              color: #64d0c8;
+            }
+
+            .taroify-step__circle {
+              background-color: #64d0c8;
+            }
+          }
+        }
+      }
+
+      .commander {
+        display: flex;
+        justify-content: space-between;
+        View {
+          display: flex;
+          align-items: center;
+          .img {
+            width: 45px;
+            height: 45px;
+          }
+          .call {
+            // height: 27px;
+            font-size: 16px;
+            // line-height: 42px;
+            font-weight: bold;
+            color: #4dcfc5;
+            margin-left: 14px;
+            border: 2px solid #4dcfc5;
+            border-radius: 6px;
+            padding: 0px 6px;
+            box-sizing: border-box;
+          }
+          .name {
+            font-size: 20px;
+            line-height: 42px;
+            font-weight: bold;
+            margin-left: 10px;
+          }
+        }
+        .help {
+          font-size: 16px;
+          line-height: 42px;
+          font-weight: bold;
+          color: #64d0c8;
+        }
+      }
+    }
+    .date {
+      padding: 19px 20px 16px 32px;
+      display: flex;
+      justify-content: space-between;
+      color: #fff;
+      View {
+        display: flex;
+        .time {
+          font-size: 20px;
+          line-height: 42px;
+          font-weight: bold;
+        }
+        .place {
+          margin-left: 12px;
+          font-size: 20px;
+          line-height: 42px;
+        }
+      }
+      .img {
+        width: 88px;
+        height: 38px;
+      }
+    }
+  }
   .use-list {
+    margin-top: 24px;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -169,6 +299,148 @@
       }
       .sec {
         margin: 0 26px;
+      }
+    }
+  }
+  .join-team {
+    margin-top: 22px;
+    background: #4dcfc5;
+    border-radius: 14px;
+    .close {
+      display: flex;
+      justify-content: flex-end;
+      View {
+        display: flex;
+        align-items: center;
+        border-radius: 0 14px;
+        background: #71eae4;
+        padding: 6px 14px;
+        height: 28px;
+        Text {
+          font-size: 16px;
+          line-height: 42px;
+          font-weight: bold;
+          color: #2ca19b;
+        }
+        .img {
+          width: 14px;
+          height: 14px;
+          margin-left: 8px;
+        }
+      }
+    }
+    .join {
+      display: flex;
+      align-items: center;
+      padding-left: 23px;
+      padding-bottom: 24px;
+      .img {
+        width: 75px;
+        height: 71px;
+        border-radius: 14px;
+        margin-right: 20px;
+      }
+      View {
+        .ontext {
+          font-size: 20px;
+          line-height: 42px;
+          font-weight: bold;
+          color: #23988f;
+        }
+        .untext {
+          font-size: 24px;
+          line-height: 42px;
+          font-weight: bold;
+          color: #2b6e69;
+        }
+      }
+    }
+  }
+  .order-list {
+    background: #f1f2f2;
+    .item {
+      margin: 21px 0;
+      background: #fff;
+      border-radius: 14px;
+      padding: 33px 20px;
+      .order-card {
+        display: flex;
+        flex-direction: column;
+        .content {
+          display: flex;
+          .img {
+            width: 142px;
+            height: 146px;
+            border-radius: 14px;
+            display: inline-table;
+          }
+          .name {
+            padding-left: 12px;
+            font-size: 28px;
+            font-weight: bold;
+            line-height: 38px;
+            .small-name {
+              padding-top: 20px;
+              font-size: 24px;
+              line-height: 38px;
+              color: #999;
+              View {
+                Text {
+                  padding: 3px 9px;
+                  background: #e8f9f8;
+                  color: #5ecdc6;
+                  font-size: 20px;
+                  line-height: 42px;
+                  font-weight: bold;
+                  margin-right: 14px;
+                }
+              }
+            }
+          }
+        }
+        .price {
+          display: flex;
+          justify-content: flex-end;
+          box-sizing: border-box;
+          color: #666;
+          padding: 24px 0;
+          border-bottom: 2px solid #eee;
+          font-size: 24px;
+          .discount {
+            width: 148px;
+            background: #f3f4f4;
+            border-radius: 2px;
+            text-align: center;
+            margin-right: 13px;
+          }
+          .money {
+            color: #fd7d81;
+          }
+        }
+        .message {
+          display: flex;
+          justify-content: flex-end;
+          font-size: 22px;
+          line-height: 42px;
+          padding-top: 22px;
+          .message-one {
+            border: 2px solid #00d2c6;
+            border-radius: 24px;
+            min-width: 134px;
+            margin-right: 14px;
+            color: #00d2c6;
+            text-align: center;
+          }
+          .message-two {
+            border: 2px solid;
+            border-radius: 24px;
+            min-width: 134px;
+            padding: 0 18px;
+            background: #00d2c6;
+            color: #fff;
+            text-align: center;
+          }
+        }
       }
     }
   }
