--- a/src/pages/myData/index.less
+++ b/src/pages/myData/index.less
@@ -26,7 +26,7 @@
         .img {
           width: 130px;
           height: 130px;
-          background: #4dcfc5;
+          border-radius: 14px;
         }
         .item-left {
           padding-left: 20px;
