--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -1,10 +1,9 @@
 .HomeScreen__root {
   background: linear-gradient(#7bbeb4, #ffffff);
   padding: 0 24px;
+  height: 100%;
   .list {
     .home-header {
-      // background: rgb(121, 158, 158);
-      // box-sizing: border-box;
       padding: 122px 0px 158px;
       display: flex;
       .now-place {
@@ -12,7 +11,6 @@
         align-items: center;
         font-size: 46px;
         font-weight: bold;
-        font-family: MStiffHei PRC, MStiffHei PRC-UltraBold;
         color: #fff;
         .place {
           width: 26px;
@@ -138,7 +136,6 @@
       margin: 24px 0;
       .order-text {
         font-size: 28px;
-        // font-family: Microsoft YaHei UI, Microsoft YaHei UI-Bold;
         font-weight: bold;
         .red-text {
           color: #f08484;
