--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -1,4 +1,5 @@
 .MineScreen__root {
+  height: 100%;
   background: #f4f4f4;
   padding: 0 30px;
   .Header__btn {
@@ -28,7 +29,6 @@
       width: 142px;
       height: 142px;
       padding: 10px;
-      // background: #f2f2f2;
       border-radius: 50%;
       .img {
         width: 142px;
