--- a/src/pages/myBrowse/index.less
+++ b/src/pages/myBrowse/index.less
@@ -22,6 +22,18 @@
           padding: 30px 22px 30px 30px;
           display: flex;
           align-items: center;
+          .no-jump {
+            width: 124px;
+            height: 128px;
+            font-size: 32px;
+            line-height: 128px;
+            color: #fff;
+            font-weight: 500;
+            border-radius: 18px;
+            background: rgba(51, 51, 51, 0.5);
+            text-align: center;
+            position: absolute;
+          }
           .jump {
             width: 124px;
             height: 128px;
@@ -30,6 +42,12 @@
           }
           .right-all {
             color: #333;
+            font-size: 28px;
+            line-height: 40px;
+            font-weight: 500;
+          }
+          .no-right-all {
+            color: #999;
             font-size: 28px;
             line-height: 40px;
             font-weight: 500;
