--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -1,232 +1,232 @@
 .HomeScreen__root {
   background: linear-gradient(#7bbeb4, #ffffff);
   padding: 0 24px;
-  .list {
-    .home-header {
-      padding: 12px 0px 158px;
+  height: 100vh;
+  overflow: scroll;
+  .home-header {
+    padding: 12px 0px 158px;
+    display: flex;
+    .now-place {
       display: flex;
-      .now-place {
-        display: flex;
-        align-items: center;
-        font-size: 46px;
-        font-weight: bold;
-        color: #fff;
-        .place {
-          width: 26px;
-          height: 32px;
-          padding-left: 12px;
-          padding-right: 33px;
-        }
-      }
-      .search-input {
-        box-sizing: border-box;
-        height: 60px;
-        display: flex;
-        flex: 1;
-        align-items: center;
-        padding: 16px 25px;
-        opacity: 0.65;
-        background: #c1ece9;
-        border-radius: 50px;
-        // box-shadow: 7px 7px 29px 1px rgba(218, 218, 218, 0.39);
-        .search {
-          width: 28px;
-          height: 28px;
-          padding-right: 18px;
-        }
+      align-items: center;
+      font-size: 46px;
+      font-weight: bold;
+      color: #fff;
+      .place {
+        width: 26px;
+        height: 32px;
+        padding-left: 12px;
+        padding-right: 33px;
       }
     }
-    .home-body {
-      .route {
-        font-size: 28px;
-        line-height: 42px;
-        color: #dbfffc;
-        padding-bottom: 24px;
-      }
-      .swiper {
-        display: flex;
-        height: 359px;
-        padding: 18px;
-        background: #fff;
-        border-radius: 18px;
-        .select-route {
-          display: flex;
-          padding-bottom: 22px;
-        }
-        .route-text {
-          font-size: 22px;
-          padding-left: 2px;
-          line-height: 42px;
-        }
-        .route-name {
-          font-size: 32px;
-          font-weight: bold;
-        }
-        .swiper-left {
-          background: #9ef0ea;
-          border-radius: 18px;
-          padding: 34px 20px;
-          margin-right: 8px;
-
-          .select-route {
-            .season {
-              width: 81px;
-              height: 42px;
-              background: #0edabb;
-              text-align: center;
-              color: #fff;
-              font-size: 30px;
-              font-weight: bold;
-              font-style: italic;
-              border-radius: 4px;
-              margin-right: 12px;
-            }
-          }
-        }
-        .swiper-right {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          .right-top {
-            box-sizing: border-box;
-            background: #81dbeb;
-            border-radius: 18px;
-            padding: 34px 20px;
-            margin-bottom: 8px;
-            .now {
-              width: 81px;
-              height: 42px;
-              background: #03f0f8;
-              text-align: center;
-              color: #fff;
-              font-size: 30px;
-              font-weight: bold;
-              font-style: italic;
-              border-radius: 4px;
-              margin-right: 12px;
-            }
-          }
-          .right-bottom {
-            flex: 1;
-            box-sizing: border-box;
-            background: #81ebad;
-            border-radius: 18px;
-            padding: 34px 20px;
-            .local {
-              width: 81px;
-              height: 42px;
-              background: #03f892;
-              text-align: center;
-              color: #fff;
-              font-size: 30px;
-              font-weight: bold;
-              font-style: italic;
-              border-radius: 4px;
-              margin-right: 12px;
-            }
-          }
-        }
+    .search-input {
+      box-sizing: border-box;
+      height: 60px;
+      display: flex;
+      flex: 1;
+      align-items: center;
+      padding: 16px 25px;
+      opacity: 0.65;
+      background: #c1ece9;
+      border-radius: 50px;
+      // box-shadow: 7px 7px 29px 1px rgba(218, 218, 218, 0.39);
+      .search {
+        width: 28px;
+        height: 28px;
+        padding-right: 18px;
       }
     }
-    .home-order {
-      padding: 22px 33px;
+  }
+  .home-body {
+    .route {
+      font-size: 28px;
+      line-height: 42px;
+      color: #dbfffc;
+      padding-bottom: 24px;
+    }
+    .swiper {
+      display: flex;
+      height: 359px;
+      padding: 18px;
       background: #fff;
       border-radius: 18px;
-      margin: 24px 0;
-      .order-text {
-        font-size: 28px;
+      .select-route {
+        display: flex;
+        padding-bottom: 22px;
+      }
+      .route-text {
+        font-size: 22px;
+        padding-left: 2px;
+        line-height: 42px;
+      }
+      .route-name {
+        font-size: 32px;
         font-weight: bold;
-        .red-text {
-          color: #f08484;
+      }
+      .swiper-left {
+        background: #9ef0ea;
+        border-radius: 18px;
+        padding: 34px 20px;
+        margin-right: 8px;
+
+        .select-route {
+          .season {
+            width: 81px;
+            height: 42px;
+            background: #0edabb;
+            text-align: center;
+            color: #fff;
+            font-size: 30px;
+            font-weight: bold;
+            font-style: italic;
+            border-radius: 4px;
+            margin-right: 12px;
+          }
         }
       }
-      .order {
-        display: inline-block;
-        border: 1px solid #64d0c8;
-        border-radius: 50px;
-        font-size: 20px;
-        padding: 7px 20px;
-        color: #64d0c8;
-        margin-top: 15px;
+      .swiper-right {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        .right-top {
+          box-sizing: border-box;
+          background: #81dbeb;
+          border-radius: 18px;
+          padding: 34px 20px;
+          margin-bottom: 8px;
+          .now {
+            width: 81px;
+            height: 42px;
+            background: #03f0f8;
+            text-align: center;
+            color: #fff;
+            font-size: 30px;
+            font-weight: bold;
+            font-style: italic;
+            border-radius: 4px;
+            margin-right: 12px;
+          }
+        }
+        .right-bottom {
+          flex: 1;
+          box-sizing: border-box;
+          background: #81ebad;
+          border-radius: 18px;
+          padding: 34px 20px;
+          .local {
+            width: 81px;
+            height: 42px;
+            background: #03f892;
+            text-align: center;
+            color: #fff;
+            font-size: 30px;
+            font-weight: bold;
+            font-style: italic;
+            border-radius: 4px;
+            margin-right: 12px;
+          }
+        }
       }
     }
-    .product-list {
-      margin-top: 24px;
-      .item {
-        width: 48.5%;
-        margin-bottom: 24px;
-        .card {
-          background: #fff;
-          border-radius: 20px;
-          overflow: hidden;
-          .big-img {
-            position: relative;
+  }
+  .home-order {
+    padding: 22px 33px;
+    background: #fff;
+    border-radius: 18px;
+    margin: 24px 0;
+    .order-text {
+      font-size: 28px;
+      font-weight: bold;
+      .red-text {
+        color: #f08484;
+      }
+    }
+    .order {
+      display: inline-block;
+      border: 1px solid #64d0c8;
+      border-radius: 50px;
+      font-size: 20px;
+      padding: 7px 20px;
+      color: #64d0c8;
+      margin-top: 15px;
+    }
+  }
+  .product-list {
+    margin-top: 24px;
+    .item {
+      width: 48.5%;
+      margin-bottom: 24px;
+      .card {
+        background: #fff;
+        border-radius: 20px;
+        overflow: hidden;
+        .big-img {
+          position: relative;
 
-            .label {
-              width: 144px;
-              padding: 4px 10px 0;
+          .label {
+            width: 144px;
+            padding: 4px 10px 0;
+            position: absolute;
+            bottom: 17px;
+            left: 17px;
+            background: #fff;
+            border-radius: 8px;
+            font-size: 20px;
+            // line-height: 42px;
+            // position: relative;
+            .black {
+              width: 76px;
+              height: 32px;
+            }
+            .label-pic {
               position: absolute;
-              bottom: 17px;
-              left: 17px;
-              background: #fff;
-              border-radius: 8px;
-              font-size: 20px;
-              // line-height: 42px;
-              // position: relative;
-              .black {
-                width: 76px;
-                height: 32px;
-              }
-              .label-pic {
-                position: absolute;
-                color: #fff;
-                left: 24px;
-              }
-              .text {
-                position: absolute;
-                right: 10px;
-              }
+              color: #fff;
+              left: 24px;
             }
-          }
-          .big {
-            width: 100%;
-            height: 415px;
-          }
-          .content {
-            padding: 17px;
             .text {
-              font-size: 24px;
-              line-height: 32px;
-              font-weight: bold;
-            }
-            .money {
-              font-size: 24px;
-              line-height: 42px;
-              font-weight: bold;
-            }
-            .consume {
-              display: flex;
-              justify-content: space-between;
-              font-size: 16px;
-              line-height: 34px;
-              color: #ababab;
-              padding: 30px 0 14px;
-            }
-            .is-like {
-              width: 17px;
-              height: 14px;
-              margin-right: 5px;
+              position: absolute;
+              right: 10px;
             }
           }
-          .right-all {
-            color: #333;
-            font-size: 28px;
-            line-height: 40px;
-            font-weight: 500;
-          }
+        }
+        .big {
+          width: 100%;
+          height: 415px;
+        }
+        .content {
+          padding: 17px;
           .text {
-            margin-bottom: 20px;
+            font-size: 24px;
+            line-height: 32px;
+            font-weight: bold;
           }
+          .money {
+            font-size: 24px;
+            line-height: 42px;
+            font-weight: bold;
+          }
+          .consume {
+            display: flex;
+            justify-content: space-between;
+            font-size: 16px;
+            line-height: 34px;
+            color: #ababab;
+            padding: 30px 0 14px;
+          }
+          .is-like {
+            width: 17px;
+            height: 14px;
+            margin-right: 5px;
+          }
+        }
+        .right-all {
+          color: #333;
+          font-size: 28px;
+          line-height: 40px;
+          font-weight: 500;
+        }
+        .text {
+          margin-bottom: 20px;
         }
       }
     }
