--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -2,16 +2,16 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  position: relative;
   .swiper {
     flex: 1;
-    // .taroify-swiper-item {
-    //   color: #fff;
-    //   font-size: 20px * 2;
-    //   background: #39a9ed;
-    //   display: flex;
-    //   justify-content: center;
-    //   align-items: center;
-    // }
+    .taroify-swiper-item {
+      overflow: scroll;
+      // color: #fff;
+      // font-size: 20px * 2;
+      // background: #39a9ed;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+    }
   }
 }
