--- a/src/pages/setPassword/index.less
+++ b/src/pages/setPassword/index.less
@@ -5,25 +5,54 @@
   border-radius: 20px 20px 0 0;
   padding: 24px;
   position: relative;
-  .name-img {
-    margin-top: 24px;
-    display: flex;
-    align-items: center;
+  .password {
     background: #fff;
+    padding: 0 30px;
     border-radius: 20px;
-    .name {
+    View {
       box-sizing: border-box;
-      height: 100px;
-      padding: 0 30px;
-      border-radius: 20px;
-      font-size: 32px;
-      line-height: 44px;
-      width: 600px;
+      display: flex;
+      align-items: center;
+      height: 90px;
+      padding: 22px 0;
+      border-bottom: 2px solid #eee;
+      View {
+        width: 128px;
+        font-size: 32px;
+        line-height: 44px;
+        font-weight: 400;
+        color: #666;
+      }
+      .name {
+        box-sizing: border-box;
+        padding: 0 18px;
+        font-size: 32px;
+        line-height: 44px;
+        // width: 600px;
+        flex: 1;
+      }
+      .img {
+        width: 32px;
+        height: 32px;
+      }
+      Text {
+        font-size: 24px;
+        line-height: 34px;
+        font-weight: 400;
+        color: #999;
+      }
     }
-    .img {
-      width: 40px;
-      height: 40px;
+
+    View:nth-last-child(1) {
+      border-bottom: 0;
     }
+  }
+  .update {
+    padding: 14px 30px;
+    font-size: 28px;
+    line-height: 40px;
+    font-weight: 400;
+    color: #4dcfc5;
   }
   .btn {
     position: absolute;
