--- a/src/pages/setUp/index.less
+++ b/src/pages/setUp/index.less
@@ -59,7 +59,7 @@
       color: #666;
     }
     .password-right {
-      color: #333;
+      color: #999;
       display: flex;
       .password-left {
         color: #666;
@@ -83,7 +83,7 @@
         color: #666;
       }
       .content-right {
-        color: #333;
+        color: #999;
         display: flex;
       }
     }
@@ -104,7 +104,7 @@
         color: #666;
       }
       .content-right {
-        color: #333;
+        color: #999;
       }
     }
   }
@@ -120,4 +120,20 @@
     color: #fff;
     font-size: 32px;
   }
+  .dialog {
+    background-image: url(../../assets/img/password/back.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    padding: 78px 56px;
+    box-sizing: border-box;
+  }
+}
+.taroify-dialog__content {
+  min-height: 0;
+}
+.taroify-dialog__message {
+  font-size: 30px;
+  line-height: 48px;
+  font-weight: 400;
+  color: #666;
 }
