--- a/src/pages/aboutUs/index.less
+++ b/src/pages/aboutUs/index.less
@@ -40,7 +40,10 @@
         color: #333;
       }
       .right {
-        color: #999;
+        .jump {
+          width: 12px;
+          height: 20px;
+        }
       }
     }
     .divide {
