--- a/src/pages/setUp/index.less
+++ b/src/pages/setUp/index.less
@@ -62,7 +62,10 @@
       color: #999;
       display: flex;
       .password-left {
-        color: #666;
+        .jump {
+          width: 12px;
+          height: 20px;
+        }
         padding-left: 20px;
       }
     }
@@ -80,7 +83,10 @@
       padding: 24px 30px;
       .content-left {
         padding-left: 20px;
-        color: #666;
+        .jump {
+          width: 12px;
+          height: 20px;
+        }
       }
       .content-right {
         color: #999;
