--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,3 +1,23 @@
 .LoginPage__root {
   padding: 120px 40px 40px 40px;
+  .logo {
+    width: 226px;
+    height: 232px;
+    margin: 154px auto 40px;
+    border-radius: 20px;
+    .img {
+      width: 226px;
+      height: 232px;
+      border-radius: 20px;
+    }
+  }
+  .btn-box {
+    padding: 0 20px;
+    .btn {
+      display: flow-root;
+      background: #4dcfc5;
+      border-radius: 50px;
+      color: #fff;
+    }
+  }
 }
