修复搜索定位顶部滚动，width改变

--- a/src/pages/location/index.less
+++ b/src/pages/location/index.less
@@ -6,6 +6,7 @@
   .sticky {
     background: #fff;
     padding: 21px 24px 26px 29px;
+    box-sizing: border-box;
   }
   .location {
     margin-top: 2px;
