--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -9,6 +9,7 @@
   .sticky {
     background: #fff;
     padding: 21px 24px 26px 29px;
+    box-sizing: border-box;
   }
   .home-header {
     display: flex;
