--- a/src/pages/setUp/index.less
+++ b/src/pages/setUp/index.less
@@ -143,3 +143,22 @@
   font-weight: 400;
   color: #666;
 }
+.taroify-dialog__footer--round .taroify-dialog__confirm:first-child,
+.taroify-dialog__footer--round .taroify-dialog__cancel:first-child {
+  height: 72px;
+  background: #f3f4f4;
+  border-radius: 50px;
+  color: #999;
+  margin-right: 40px;
+  font-size: 28px;
+  font-weight: 500;
+}
+.taroify-dialog__footer--round .taroify-dialog__confirm:last-child,
+.taroify-dialog__footer--round .taroify-dialog__cancel:last-child {
+  height: 72px;
+  background: #4dcfc5;
+  border-radius: 50px;
+  color: #fff;
+  font-size: 28px;
+  font-weight: 500;
+}
