--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -67,14 +67,14 @@
       align-items: center;
       padding: 45px 30px;
       .Token__Img .img {
-        width: 112px;
-        height: 112px;
+        width: 44px;
+        height: 44px;
       }
       .Token__Num {
         color: #fff;
         font-size: 70px;
         font-weight: bold;
-        padding-left: 10px;
+        padding-right: 16px;
       }
     }
   }
