--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -92,9 +92,11 @@
         border-radius: 18px;
         // padding: 34px 20px;
         margin-right: 8px;
+        width: 278px;
+        height: 310px;
         .first {
-          width: 278px;
-          height: 322px;
+          width: 100%;
+          height: 100%;
         }
         .select-route {
           .season {
@@ -116,9 +118,11 @@
         display: flex;
         flex-direction: column;
         .right-top {
+          width: 380px;
+          height: 140px;
           .second {
-            width: 380px;
-            height: 140px;
+            width: 100%;
+            height: 100%;
           }
           box-sizing: border-box;
           // background: #81dbeb;
@@ -139,11 +143,13 @@
           }
         }
         .right-bottom {
+          width: 380px;
+          height: 160px;
           .third {
-            width: 380px;
-            height: 160px;
+            width: 100%;
+            height: 100%;
           }
-          flex: 1;
+          // flex: 1;
           box-sizing: border-box;
           // background: #81ebad;
           border-radius: 18px;
@@ -199,47 +205,47 @@
         overflow: hidden;
         .big-img {
           position: relative;
-
+          height: 415px;
           .label {
-            width: 144px;
-            padding: 4px 10px 0;
+            width: 166px;
+            height: 45px;
+            display: flex;
             position: absolute;
             bottom: 17px;
             left: 17px;
             background: #fff;
             border-radius: 8px;
-            font-size: 20px;
+            font-size: 22px;
             // line-height: 42px;
-            // position: relative;
-            .black {
-              width: 76px;
-              height: 32px;
-            }
             .label-pic {
-              position: absolute;
+              margin: 6px 8px 5px 6px;
+              width: 76px;
+              height: 34px;
+              background: url('../../../../assets/img/home/black.png') no-repeat;
+              background-size: 100% 100%;
               color: #fff;
-              left: 24px;
+              text-align: center;
             }
             .text {
-              position: absolute;
-              right: 10px;
+              margin: 5px 11px 7px 0;
             }
           }
         }
         .big {
           width: 100%;
-          height: 415px;
+          height: 100%;
           border-radius: 14px 14px 0px 0px;
         }
         .content {
-          padding: 17px;
+          padding: 0 17px;
           .text {
-            font-size: 24px;
+            font-size: 28px;
             line-height: 32px;
             font-weight: bold;
+            padding-bottom: 26px;
           }
           .money {
-            font-size: 24px;
+            font-size: 28px;
             line-height: 42px;
             font-weight: bold;
           }
@@ -249,7 +255,7 @@
             font-size: 22px;
             line-height: 34px;
             color: #ababab;
-            padding: 30px 0 14px;
+            padding: 22px 0 27px;
           }
           .is-like {
             width: 17px;
@@ -262,9 +268,6 @@
           font-size: 28px;
           line-height: 40px;
           font-weight: 500;
-        }
-        .text {
-          margin-bottom: 20px;
         }
       }
     }
