--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -1,6 +1,28 @@
 .MineScreen__root {
   background: #f4f4f4;
   padding: 0 30px;
+  .index {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    z-index: 99999;
+  }
+  .canvas-wrap {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    .btn-save {
+      margin-top: 40px;
+    }
+  }
   .Header__btn {
     display: flex;
     justify-content: flex-end;
@@ -56,15 +78,14 @@
   }
   .dolor {
     margin-top: 30px;
-    position: relative;
     background: #4dcfc5;
     border-radius: 14px;
-    .details .img {
+    .img-1 {
       width: 36px;
       height: 36px;
-      position: absolute;
-      top: 18px;
-      right: 18px;
+      float: right;
+      padding-top: 18px;
+      padding-right: 18px;
     }
     .token {
       display: flex;
@@ -235,17 +256,19 @@
   .use-list {
     margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
+    flex-wrap: wrap;
     border-radius: 14px;
     background: linear-gradient(180deg, #f0fffe, #ffffff 37%, #feffff 99%, #ffffff);
 
-    padding: 0 27px;
+    padding: 0 27px 24px;
     .item {
+      width: 25%;
       display: flex;
       align-items: center;
       flex-direction: column;
       box-sizing: border-box;
-      padding: 26px 0 24px;
+      padding: 26px 0 0;
       .img {
         width: 52px;
         height: 52px;
@@ -495,6 +518,54 @@
           padding-top: 14px;
         }
       }
+    }
+  }
+  .popup {
+    background: #f3f4f4;
+    .popup-title {
+      padding: 34px 0 44px;
+      font-size: 32px;
+      font-weight: 500;
+      color: #333;
+      text-align: center;
+      .del {
+        position: absolute;
+        right: 32px;
+        top: 30px;
+        width: 52px;
+        height: 52px;
+      }
+    }
+    .popup-select {
+      padding: 0 78px;
+      display: flex;
+      justify-content: space-between;
+
+      Button {
+        border: 0;
+        margin: 0;
+        padding: 0;
+        line-height: 1.2;
+        text-align: center;
+        font-size: 24px;
+        font-weight: 400;
+        color: #666;
+        Image {
+          padding-bottom: 12px;
+          width: 96px;
+          height: 96px;
+        }
+      }
+    }
+    .btn {
+      margin: 60px 78px 38px;
+      border-radius: 40px;
+      background: #fff;
+      font-size: 32px;
+      font-weight: 400;
+      color: #666;
+      line-height: 80px;
+      text-align: center;
     }
   }
 }
