g更正全部页面

--- a/src/pages/myData/index.less
+++ b/src/pages/myData/index.less
@@ -52,7 +52,13 @@
     }
     .item-right {
       display: flex;
+      align-items: center;
       color: #333;
+    }
+    .img-left {
+      width: 12px;
+      height: 20px;
+      padding-left: 12px;
     }
   }
 }
