--- a/src/pages/setAutograph/index.less
+++ b/src/pages/setAutograph/index.less
@@ -6,19 +6,19 @@
   padding: 24px;
   position: relative;
   .name-img {
-    margin-top: 24px;
     display: flex;
     align-items: center;
     background: #fff;
     border-radius: 20px;
     .name {
       box-sizing: border-box;
-      height: 100px;
-      padding: 0 30px;
+      height: 274px;
+      padding: 28px 30px;
       border-radius: 20px;
       font-size: 32px;
       line-height: 44px;
-      width: 600px;
+      font-weight: 400;
+      // width: 600px;
     }
     .img {
       width: 40px;
