--- a/src/pages/location/index.less
+++ b/src/pages/location/index.less
@@ -21,14 +21,27 @@
     .place-text {
       display: flex;
       align-items: center;
+      font-size: 24px;
+      font-weight: 400;
+      color: #4dcfc5;
+      .place-text-container {
+        flex: 1;
+        align-items: center;
+      }
       .place {
         width: 22px;
         height: 31px;
         padding-right: 12px;
       }
+    }
+    .refresh-ic {
+      width: 29px;
+      height: 25px;
+      margin-right: 5px;
+    }
+    .refresh-text {
       font-size: 24px;
-      font-weight: 400;
-      color: #4dcfc5;
+      color: #333333;
     }
   }
   .home-header {
