--- a/src/pages/setUp/index.less
+++ b/src/pages/setUp/index.less
@@ -16,7 +16,7 @@
     .img {
       width: 130px;
       height: 130px;
-      background: #a4b2b2;
+      // background: #a4b2b2;
     }
     .massage {
       padding-left: 8px;
