首页搜索，定位修正，:测试地址

--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -54,6 +54,7 @@
       .img {
         width: 100%;
         height: 100%;
+        border-radius: 50%;
       }
     }
     .User__Name {
@@ -566,6 +567,22 @@
       color: #666;
       line-height: 80px;
       text-align: center;
+    }
+  }
+  .red-body {
+    position: relative;
+    .red-num {
+      text-align: center;
+      color: #fff;
+      font-size: 24px;
+      position: absolute;
+      top: -25px;
+      right: 55px;
+      width: 34px;
+      height: 34px;
+      background: #f98e8e;
+      border: 6px solid #fff;
+      border-radius: 50%;
     }
   }
 }
