--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -7,6 +7,7 @@
 .TabBar__root {
   display: flex;
   background-color: rgba(255, 255, 255, 0.95);
+  box-shadow: 7px 7px 22px 1px rgba(106, 106, 106, 0.39);
   margin: 0 50px;
   border: 6px solid #fff;
   border-radius: 76px;
