--- a/src/pages/search/index.less
+++ b/src/pages/search/index.less
@@ -1,18 +1,95 @@
 .SearchPage__root {
   background: #f3f4f4;
   // padding: 0 24px;
-  // height: 100vh;
+  height: 100vh;
   overflow: scroll;
   .all-in {
-    padding: 0 28px;
-  }
-  .sticky {
-    background: #fff;
-    padding: 21px 24px 26px 29px;
-    box-sizing: border-box;
+    padding: 160px 28px 28px;
+    .product-list {
+      .item {
+        width: 48.5%;
+        margin-bottom: 24px;
+        .card {
+          background: #fff;
+          border-radius: 14px;
+          overflow: hidden;
+          .big-img {
+            position: relative;
+            height: 415px;
+            .label {
+              width: 166px;
+              height: 45px;
+              display: flex;
+              position: absolute;
+              bottom: 17px;
+              left: 17px;
+              background: #fff;
+              border-radius: 8px;
+              font-size: 22px;
+              // line-height: 42px;
+              .label-pic {
+                margin: 6px 8px 5px 6px;
+                width: 76px;
+                height: 34px;
+                background: url('../../assets/img/home/black.png') no-repeat;
+                background-size: 100% 100%;
+                color: #fff;
+                text-align: center;
+              }
+              .text {
+                margin: 5px 11px 7px 0;
+              }
+            }
+          }
+          .big {
+            width: 100%;
+            height: 100%;
+            border-radius: 14px 14px 0px 0px;
+          }
+          .content {
+            padding: 0 17px;
+            .text {
+              font-size: 28px;
+              line-height: 32px;
+              font-weight: bold;
+              padding-bottom: 26px;
+            }
+            .money {
+              font-size: 28px;
+              line-height: 42px;
+              font-weight: bold;
+            }
+            .consume {
+              display: flex;
+              justify-content: space-between;
+              font-size: 22px;
+              line-height: 34px;
+              color: #ababab;
+              padding: 22px 0 27px;
+            }
+            .is-like {
+              width: 17px;
+              height: 14px;
+              margin-right: 5px;
+            }
+          }
+          .right-all {
+            color: #333;
+            font-size: 28px;
+            line-height: 40px;
+            font-weight: 500;
+          }
+        }
+      }
+    }
   }
   .home-header {
-    display: flex;
+    background: #fff;
+    padding: 24px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 99;
     .now-place {
       display: flex;
       align-items: center;
@@ -164,85 +241,6 @@
       padding: 7px 20px;
       color: #64d0c8;
       margin-top: 15px;
-    }
-  }
-  .product-list {
-    .item {
-      width: 48.5%;
-      margin-bottom: 24px;
-      .card {
-        background: #fff;
-        border-radius: 20px;
-        overflow: hidden;
-        .big-img {
-          position: relative;
-
-          .label {
-            width: 144px;
-            padding: 4px 10px 0;
-            position: absolute;
-            bottom: 17px;
-            left: 17px;
-            background: #fff;
-            border-radius: 8px;
-            font-size: 20px;
-            // line-height: 42px;
-            // position: relative;
-            .black {
-              width: 76px;
-              height: 32px;
-            }
-            .label-pic {
-              position: absolute;
-              color: #fff;
-              left: 24px;
-            }
-            .text {
-              position: absolute;
-              right: 10px;
-            }
-          }
-        }
-        .big {
-          width: 100%;
-          height: 415px;
-        }
-        .content {
-          padding: 17px;
-          .text {
-            font-size: 24px;
-            line-height: 32px;
-            font-weight: bold;
-          }
-          .money {
-            font-size: 24px;
-            line-height: 42px;
-            font-weight: bold;
-          }
-          .consume {
-            display: flex;
-            justify-content: space-between;
-            font-size: 16px;
-            line-height: 34px;
-            color: #ababab;
-            padding: 30px 0 14px;
-          }
-          .is-like {
-            width: 17px;
-            height: 14px;
-            margin-right: 5px;
-          }
-        }
-        .right-all {
-          color: #333;
-          font-size: 28px;
-          line-height: 40px;
-          font-weight: 500;
-        }
-        .text {
-          margin-bottom: 20px;
-        }
-      }
     }
   }
 }
