--- a/src/pages/setSex/index.less
+++ b/src/pages/setSex/index.less
@@ -11,11 +11,12 @@
     .item {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       box-sizing: border-box;
       padding: 22px 30px;
       .img {
-        width: 40px;
-        height: 40px;
+        width: 24px;
+        height: 18px;
       }
     }
   }
