--- a/src/pages/setUp/index.less
+++ b/src/pages/setUp/index.less
@@ -16,6 +16,7 @@
     .img {
       width: 130px;
       height: 130px;
+      border-radius: 50%;
       // background: #a4b2b2;
     }
     .massage {
