首页，搜索下拉加载

--- a/src/components/tabbar/index.less
+++ b/src/components/tabbar/index.less
@@ -1,16 +1,18 @@
 .TabBar__root__wrap {
   position: fixed;
-  bottom: 20px;
+  bottom: 40px;
   left: 0;
   right: 0;
 }
 .TabBar__root {
   display: flex;
   background-color: rgba(255, 255, 255, 0.95);
-  box-shadow: 7px 7px 22px 1px rgba(106, 106, 106, 0.39);
+  // box-shadow: 7px 7px 22px 1px rgba(106, 106, 106, 0.39); //首页
+  box-shadow: 0px 10px 12px 0px rgba(213, 213, 213, 0.39); //new
+  // box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.05); //我的
   margin: 0 50px;
   border: 6px solid #fff;
-  border-radius: 76px;
+  border-radius: 56px;
   padding: 8px 0 4px;
   .tab {
     box-sizing: border-box;
