--- a/src/pages/myorder/index.less
+++ b/src/pages/myorder/index.less
@@ -9,7 +9,7 @@
 
 .taroify-tabs__nav--line {
   background: #f1f2f2;
-  border-radius: 20px 20px 0 0;
+  // border-radius: 20px 20px 0 0;
 }
 .taroify-tabs__line {
   bottom: 28px;
@@ -20,6 +20,8 @@
 }
 .taroify-tabs__tab {
   font-size: 24px;
+
+  background: #f1f2f2;
 }
 .taroify-tabs__tab--active {
   font-size: 28px;
