--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -11,7 +11,7 @@
       }
       View {
         position: absolute;
-        bottom: 170px;
+        bottom: 90px;
         left: 30px;
         color: #dbfffc;
         font-size: 28px;
@@ -72,8 +72,8 @@
     }
   }
   .go-done {
-    position: absolute;
-    top: 300px;
+    // position: absolute;
+    // top: 300px;
     // background: #f3f4f4;
     // box-shadow: -3px -2px 20px 20px #f3f4f4;
   }
@@ -297,7 +297,7 @@
 .basic-swiped {
   position: absolute;
   left: 80px;
-  bottom: 150px;
+  bottom: 70px;
 }
 .taroify-swiper__indicator--active {
   background: #64d0c8;
