--- a/src/pages/usualMessage/index.less
+++ b/src/pages/usualMessage/index.less
@@ -16,7 +16,7 @@
       height: 140px;
       background: #ffffff;
       border-radius: 14px;
-      margin: 19px 0px 2px;
+      // margin: 19px 0px 2px;
       padding: 46px;
       display: flex;
       justify-content: center;
@@ -31,9 +31,6 @@
         color: #a8a8a8;
         line-height: 48px;
       }
-    }
-    .add:nth-of-type(1) {
-      margin-right: 15px;
     }
   }
   .item {
@@ -72,15 +69,6 @@
               margin-left: 13px;
               color: #20d3c8;
             }
-            .default {
-              font-size: 24px;
-              background: #f3f4f4;
-              border-radius: 16px;
-              font-size: 24px;
-              padding: 4px 16px;
-              color: #a8a8a8;
-              margin-left: 7px;
-            }
           }
           .tel {
             font-size: 28px;
@@ -93,6 +81,12 @@
           color: #a8a8a8;
           padding-top: 22px;
         }
+      }
+      .del-btn {
+        font-size: 28px;
+        line-height: 40px;
+        color: #54d3a9;
+        padding: 8px 12px;
       }
       .jump {
         width: 16px;
