常用信息出行人

--- a/src/pages/usualMessage/index.less
+++ b/src/pages/usualMessage/index.less
@@ -116,3 +116,10 @@
 .taroify-tabs__tab__content {
   z-index: 2;
 }
+.custom-swipe-cell {
+  .taroify-swipe-cell__actions {
+    .taroify-button {
+      height: 100%;
+    }
+  }
+}
