fix: 取消关注店铺

--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -212,9 +212,8 @@
   .product-list {
     margin: 24px;
     padding-bottom: 120px;
+    // max-height: 500px;
     // margin-top: 24px;
-  }
-  .noMore {
   }
 }
 
