代币，邀请好友，我的行程，我的界面按需求调整

--- a/src/pages/index/components/mine/index.less
+++ b/src/pages/index/components/mine/index.less
@@ -1,7 +1,7 @@
 .MineScreen__root {
   background: #f4f4f4;
   min-height: 100vh;
-  padding: 0 30px 180px;
+  padding: 24px 30px 180px;
   .index {
     display: flex;
     align-items: center;
@@ -25,27 +25,30 @@
     }
   }
   .Header__btn {
+    position: absolute;
+    right: 24px;
     display: flex;
     justify-content: flex-end;
-    margin-right: 14px;
+    // margin-right: 14px;
     .btn {
       .img1 {
         width: 28px;
         height: 30px;
-        margin-right: 30px;
+        margin-right: 26px;
       }
       .img2 {
-        width: 32px;
-        height: 36px;
+        width: 30px;
+        height: 30px;
         margin-right: 22px;
       }
       .img3 {
-        width: 32px;
-        height: 36px;
+        width: 36px;
+        height: 32px;
       }
     }
   }
   .user {
+    margin-top: 10px;
     display: flex;
     align-items: center;
     .User__Img {
