修改头像设置，我的代币在我的页面显显示问题

--- a/src/pages/setPic/index.less
+++ b/src/pages/setPic/index.less
@@ -16,7 +16,10 @@
     }
   }
   .btn-view {
-    margin: 502px 24px 0px;
+    position: absolute;
+    left: 24px;
+    right: 24px;
+    bottom: 90px;
     font-size: 32px;
     font-weight: 500;
     line-height: 44px;
