fix: 禁止关注小店列表ios橡皮筋效果

--- a/src/pages/followStore/index.less
+++ b/src/pages/followStore/index.less
@@ -1,16 +1,15 @@
 .MyBrowsePage__root {
   box-sizing: border-box;
-  // height: 100vh;
+  height: 100vh;
   background: #f3f4f4;
   border-radius: 20px 20px 0 0;
   padding: 4px 24px;
   position: relative;
-
+  overflow-y: auto;
   .browse-list {
     .list {
       .item {
         margin: 20px 0px;
-
         .card {
           .btn-box {
             display: flex;
