首页扫一扫

--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -35,6 +35,17 @@
     padding: 24px;
     display: flex;
     z-index: 99;
+    .saoyisao {
+      display: flex;
+      align-items: center;
+      .sao {
+        width: 36px;
+        height: 36px;
+        padding-left: 30px;
+        margin: 0 auto;
+      }
+    }
+
     .now-place {
       display: flex;
       align-items: center;
