--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -1,5 +1,6 @@
 .LoginPage__root {
   padding: 120px 40px 40px 40px;
+  background: url('../../assets/img/token/back.png');
   .logo {
     width: 226px;
     height: 232px;
@@ -11,13 +12,32 @@
       border-radius: 20px;
     }
   }
+  .login {
+    text-align: center;
+    .text-one {
+      font-size: 52px;
+      font-weight: 500;
+      color: #333333;
+      line-height: 74px;
+    }
+    .text-two {
+      font-size: 32px;
+      font-weight: 400;
+      color: #666666;
+      line-height: 44px;
+    }
+  }
   .btn-box {
-    padding: 0 20px;
+    padding: 0 100px;
     .btn {
+      padding: 26px 0px;
       display: flow-root;
       background: #4dcfc5;
       border-radius: 50px;
       color: #fff;
+      font-size: 32px;
+      font-weight: 400;
+      line-height: 44px;
     }
   }
   .toast {
