首页商品列表底部（没有更多了）

--- a/src/pages/index/components/home/index.less
+++ b/src/pages/index/components/home/index.less
@@ -230,6 +230,11 @@
     // max-height: 500px;
     // margin-top: 24px;
   }
+  .noMore {
+    font-size: 28px;
+    color: #ababab;
+    text-align: center;
+  }
 }
 
 .taroify-list {
