--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -35,9 +35,13 @@
     top: 0;
     right: 0;
     left: 0;
-    padding: 24px;
-    display: flex;
     z-index: 99;
+    .home-nav {
+      padding-left: 24px;
+      padding-right: 24px;
+      display: flex;
+      flex-direction: row;
+    }
     .saoyisao {
       display: flex;
       align-items: center;
@@ -83,6 +87,9 @@
           color: #f4fffe;
         }
       }
+    }
+    .capsule {
+      width: 170px;
     }
   }
   .go-done {
