fix: 列表不能滚动

--- a/src/pages/msg/index.less
+++ b/src/pages/msg/index.less
@@ -50,11 +50,15 @@
       }
     }
   }
+  .msg-scroll {
+    margin-top: 20px;
+    height: calc(100vh - 260px);
+    overflow: hidden;
+    border-radius: 20px;
+  }
   .msg-list {
     background-color: #ffffff;
-    margin-top: 20px;
     padding: 0 30px;
-    border-radius: 20px;
     .item {
       display: flex;
       flex-direction: row;
