fix: 修改点赞列表没有数据页面

--- a/src/pages/mine/index.less
+++ b/src/pages/mine/index.less
@@ -1,7 +1,10 @@
 .MineScreen__root {
   background: #f4f4f4;
-  min-height: 100vh;
+  // min-height: 100vh;
   padding: 24px 30px 180px;
+  .mineScroll {
+    height: calc(100vh - 48px);
+  }
   .index {
     display: flex;
     align-items: center;
