--- a/src/pages/myLiked/index.less
+++ b/src/pages/myLiked/index.less
@@ -7,7 +7,8 @@
   position: relative;
 
   .liked-list {
-    .list {
+    .listView {
+      height: calc(100vh - 48px);
       .item {
         margin: 20px 0px 10px;
         .date {
