--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -4,6 +4,8 @@
   max-height: 100vh;
   padding-top: 296px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
   .bg {
     position: fixed;
     top: 0;
@@ -41,6 +43,7 @@
     }
   }
   .btn-box {
+    flex: 1;
     padding: 136px 100px 0;
     .btn {
       padding: 26px 0px;
@@ -56,9 +59,9 @@
   .protocol {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    // align-items: center;
-    padding: 136px 100px 0;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 165px;
     .check {
       padding-top: 6px;
       .img {
@@ -75,7 +78,7 @@
         font-size: 24px;
         font-weight: 400;
         color: #a2a2a2;
-        line-height: 34px;
+        // line-height: 34px;
       }
       .highlight {
         margin-left: 6px;
