--- a/src/minePackage/pages/systemsNotice/index.less
+++ b/src/minePackage/pages/systemsNotice/index.less
@@ -2,4 +2,12 @@
   min-height: 100vh;
   background-color: #f3f4f4;
   padding: 0 30px;
+  .msg_list {
+    height: 100%;
+  }
+  .noMore {
+    font-size: 28px;
+    color: #ababab;
+    text-align: center;
+  }
 }
