--- a/src/pages/myBrowse/index.less
+++ b/src/pages/myBrowse/index.less
@@ -1,6 +1,6 @@
 .MyBrowsePage__root {
   background: #f3f4f4;
-  height: 100vh;
+  height: calc(100vh - 24px);
   overflow-y: auto;
   padding: 24px;
   .item {
