--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -12,13 +12,18 @@
     right: 0;
     left: 0;
     z-index: 99;
-    background-color: #4dcfc5;
+    // background-color: #4dcfc5;
     .loginNav-body {
       padding: 0 30px;
       .back {
+        width: 60px;
         font-size: 32px;
         font-weight: 400;
         color: #ffffff;
+        .img {
+          width: 16px;
+          height: 28px;
+        }
       }
     }
   }
