--- a/src/components/navbar/index.less
+++ b/src/components/navbar/index.less
@@ -7,3 +7,8 @@
     justify-content: center;
   }
 }
+.mask {
+  background-image: url(../../assets/img/home/mask.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
